// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionsToolbar renders SubscriptionsToolbar 1`] = `
<Row
  bsClass="row"
  className="toolbar-pf table-view-pf-toolbar-external"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    sm={12}
  >
    <Form
      bsClass="form"
      className="toolbar-pf-actions"
      componentClass="form"
      horizontal={false}
      inline={false}
    >
      <FormGroup
        bsClass="form-group"
        className="toolbar-pf-filter"
      >
        <SearchBar
          data={
            Object {
              "autocomplete": Object {
                "apiParams": Object {},
                "url": "/katello/api/v2/subscriptions/auto_complete_search",
              },
              "bookmarks": Object {},
            }
          }
          initialQuery=""
          onSearch={[MockFunction]}
          onSearchChange={[MockFunction]}
        />
      </FormGroup>
      <div
        className="option-tooltip-container"
      >
        <OptionTooltip
          icon="fa-columns"
          id="subscriptionTableTooltip"
          onChange={[Function]}
          onClose={[Function]}
          options={Array []}
          rootClose={true}
        />
      </div>
      <div
        className="toolbar-pf-action-right"
      >
        <FormGroup
          bsClass="form-group"
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            Manage Manifest
          </Button>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            Export CSV
          </Button>
        </FormGroup>
      </div>
    </Form>
  </Col>
</Row>
`;

exports[`SubscriptionsToolbar renders SubscriptionsToolbar with disabled add button 1`] = `
<Row
  bsClass="row"
  className="toolbar-pf table-view-pf-toolbar-external"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    sm={12}
  >
    <Form
      bsClass="form"
      className="toolbar-pf-actions"
      componentClass="form"
      horizontal={false}
      inline={false}
    >
      <FormGroup
        bsClass="form-group"
        className="toolbar-pf-filter"
      >
        <SearchBar
          data={
            Object {
              "autocomplete": Object {
                "apiParams": Object {},
                "url": "/katello/api/v2/subscriptions/auto_complete_search",
              },
              "bookmarks": Object {},
            }
          }
          initialQuery=""
          onSearch={[MockFunction]}
          onSearchChange={[MockFunction]}
        />
      </FormGroup>
      <div
        className="option-tooltip-container"
      >
        <OptionTooltip
          icon="fa-columns"
          id="subscriptionTableTooltip"
          onChange={[Function]}
          onClose={[Function]}
          options={Array []}
          rootClose={true}
        />
      </div>
      <div
        className="toolbar-pf-action-right"
      >
        <FormGroup
          bsClass="form-group"
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            Manage Manifest
          </Button>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            Export CSV
          </Button>
        </FormGroup>
      </div>
    </Form>
  </Col>
</Row>
`;

exports[`SubscriptionsToolbar renders SubscriptionsToolbar with disabled delete button 1`] = `
<Row
  bsClass="row"
  className="toolbar-pf table-view-pf-toolbar-external"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    sm={12}
  >
    <Form
      bsClass="form"
      className="toolbar-pf-actions"
      componentClass="form"
      horizontal={false}
      inline={false}
    >
      <FormGroup
        bsClass="form-group"
        className="toolbar-pf-filter"
      >
        <SearchBar
          data={
            Object {
              "autocomplete": Object {
                "apiParams": Object {},
                "url": "/katello/api/v2/subscriptions/auto_complete_search",
              },
              "bookmarks": Object {},
            }
          }
          initialQuery=""
          onSearch={[MockFunction]}
          onSearchChange={[MockFunction]}
        />
      </FormGroup>
      <div
        className="option-tooltip-container"
      >
        <OptionTooltip
          icon="fa-columns"
          id="subscriptionTableTooltip"
          onChange={[Function]}
          onClose={[Function]}
          options={Array []}
          rootClose={true}
        />
      </div>
      <div
        className="toolbar-pf-action-right"
      >
        <FormGroup
          bsClass="form-group"
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            Manage Manifest
          </Button>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            Export CSV
          </Button>
        </FormGroup>
      </div>
    </Form>
  </Col>
</Row>
`;

exports[`SubscriptionsToolbar renders SubscriptionsToolbar with disabled manifest actions 1`] = `
<Row
  bsClass="row"
  className="toolbar-pf table-view-pf-toolbar-external"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    sm={12}
  >
    <Form
      bsClass="form"
      className="toolbar-pf-actions"
      componentClass="form"
      horizontal={false}
      inline={false}
    >
      <FormGroup
        bsClass="form-group"
        className="toolbar-pf-filter"
      >
        <SearchBar
          data={
            Object {
              "autocomplete": Object {
                "apiParams": Object {},
                "url": "/katello/api/v2/subscriptions/auto_complete_search",
              },
              "bookmarks": Object {},
            }
          }
          initialQuery=""
          onSearch={[MockFunction]}
          onSearchChange={[MockFunction]}
        />
      </FormGroup>
      <div
        className="option-tooltip-container"
      >
        <OptionTooltip
          icon="fa-columns"
          id="subscriptionTableTooltip"
          onChange={[Function]}
          onClose={[Function]}
          options={Array []}
          rootClose={true}
        />
      </div>
      <div
        className="toolbar-pf-action-right"
      >
        <FormGroup
          bsClass="form-group"
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            Manage Manifest
          </Button>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            Export CSV
          </Button>
        </FormGroup>
      </div>
    </Form>
  </Col>
</Row>
`;

exports[`SubscriptionsToolbar renders SubscriptionsToolbar with table columns 1`] = `
<Row
  bsClass="row"
  className="toolbar-pf table-view-pf-toolbar-external"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    sm={12}
  >
    <Form
      bsClass="form"
      className="toolbar-pf-actions"
      componentClass="form"
      horizontal={false}
      inline={false}
    >
      <FormGroup
        bsClass="form-group"
        className="toolbar-pf-filter"
      >
        <SearchBar
          data={
            Object {
              "autocomplete": Object {
                "apiParams": Object {},
                "url": "/katello/api/v2/subscriptions/auto_complete_search",
              },
              "bookmarks": Object {},
            }
          }
          initialQuery=""
          onSearch={[MockFunction]}
          onSearchChange={[MockFunction]}
        />
      </FormGroup>
      <div
        className="option-tooltip-container"
      >
        <OptionTooltip
          icon="fa-columns"
          id="subscriptionTableTooltip"
          onChange={[Function]}
          onClose={[Function]}
          options={
            Array [
              Object {
                "key": "col1",
                "label": "Col 1",
                "value": true,
              },
              Object {
                "key": "col2",
                "label": "Col 2",
                "value": false,
              },
              Object {
                "key": "col2",
                "label": "Col 2",
                "value": false,
              },
            ]
          }
          rootClose={true}
        />
      </div>
      <div
        className="toolbar-pf-action-right"
      >
        <FormGroup
          bsClass="form-group"
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            Manage Manifest
          </Button>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            disabled={false}
            onClick={[Function]}
          >
            Export CSV
          </Button>
        </FormGroup>
      </div>
    </Form>
  </Col>
</Row>
`;
